--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "website-portfolio",
+    "name": "portfolio-website",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
