--- a/package.json
+++ b/package.json
@@ -1,48 +1,50 @@
 {
-  "name": "portfolio-website",
-  "version": "1.0.0",
-  "description": "A React web application for showcasing my projects and experiences as a portfolio website.",
-  "main": "index.js",
-  "scripts": {
-    "build": "NODE_ENV='production' webpack",
-    "start": "webpack serve",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ethanratnofsky/Portfolio-Website.git"
-  },
-  "author": "Ethan Ratnofsky",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ethanratnofsky/Portfolio-Website/issues"
-  },
-  "homepage": "https://www.ethanratnofsky.com",
-  "devDependencies": {
-    "@babel/core": "^7.18.10",
-    "@babel/preset-env": "^7.18.10",
-    "@babel/preset-react": "^7.18.6",
-    "@svgr/webpack": "^6.3.1",
-    "babel-loader": "^8.2.5",
-    "css-loader": "^6.7.1",
-    "file-loader": "^6.2.0",
-    "gh-pages": "^4.0.0",
-    "html-webpack-plugin": "^5.5.0",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.10.0"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0"
-  },
-  "babel": {
-    "presets": [
-      "@babel/preset-env",
-      "@babel/preset-react"
-    ]
-  }
+    "name": "portfolio-website",
+    "version": "1.0.0",
+    "description": "A React web application for showcasing my projects and experiences as a portfolio website.",
+    "main": "index.js",
+    "scripts": {
+        "build": "NODE_ENV='production' webpack",
+        "start": "webpack serve",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d dist",
+        "format": "prettier --write \"**/*.{js,jsx,css,md}\""
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/ethanratnofsky/Portfolio-Website.git"
+    },
+    "author": "Ethan Ratnofsky",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/ethanratnofsky/Portfolio-Website/issues"
+    },
+    "homepage": "https://www.ethanratnofsky.com",
+    "devDependencies": {
+        "@babel/core": "^7.18.10",
+        "@babel/preset-env": "^7.18.10",
+        "@babel/preset-react": "^7.18.6",
+        "@svgr/webpack": "^6.3.1",
+        "babel-loader": "^8.2.5",
+        "css-loader": "^6.7.1",
+        "file-loader": "^6.2.0",
+        "gh-pages": "^4.0.0",
+        "html-webpack-plugin": "^5.5.0",
+        "style-loader": "^3.3.1",
+        "webpack": "^5.74.0",
+        "webpack-cli": "^4.10.0",
+        "webpack-dev-server": "^4.10.0"
+    },
+    "dependencies": {
+        "prettier": "^2.8.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.3.0"
+    },
+    "babel": {
+        "presets": [
+            "@babel/preset-env",
+            "@babel/preset-react"
+        ]
+    }
 }
